[package]
name = "ethereum-rust-implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
clap = { version = "4.5.3", features = ["derive"] }
ethers-core = "2.0.14"
jsonrpsee = { version = "0.22.3", features = ["server", "macros"] }
jsonrpsee-core = "0.22.3"
libmdbx = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
