[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-core = { workspace = true }
serde = { workspace = true }
